[package]
name = "byte_flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
env_logger = "0.10.1"
log = "0.4.20"
log4rs = "1.2.0"
thiserror = "1.0.56"
